syntax = "proto3";
option go_package = "proto.bank";

service BankService {
  rpc List(ListBankRequest) returns (ListBankResponse);
  rpc Create(CreateBankRequest) returns (BankProfileResponse);
  rpc Get(SingleBankRequest) returns (BankProfileResponse);
  rpc Update(UpdateBankRequest) returns (BankSuccessResponse);
  rpc Delete(SingleBankRequest) returns (BankSuccessResponse);
}

message ListBankRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListBankResponse {
  repeated BankProfileResponse banks = 1;
}

message CreateBankRequest{
  string code = 1;
  string name = 2;
  string short_name = 3;
  int64 country_id = 4;
  string open_date = 5;
  string close_date = 6;
  string activation_date = 7;
  string deactivation_date = 8;
  string flex_fin_id = 9;
}

message SingleBankRequest{
  oneof bank_identifier {
    string id = 1;
    string code = 2;
  }
}

message BankProfileResponse{
  string id = 1;
  string name = 2;
  string code = 3;
  string short_name = 4;
  int64 country_id = 5;
  string open_date = 6;
  string close_date = 7;
  string activation_date = 8;
  string deactivation_date = 9;
  string flex_fin_id = 10;
  string deleted_at = 11;
}

message BankSuccessResponse{
  string response = 1;
}

message UpdateBankRequest{
  string id = 1;
  string name = 2;
  string code = 3;
  string short_name = 4;
  int64 country_id = 5;
  string open_date = 6;
  string close_date = 7;
  string activation_date = 8;
  string deactivation_date = 9;
  string flex_fin_id = 10;
}
